the conact page is completed

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
     text-align: center;
 }
 .heart{
+    /* border:  solid red; */
     color: red;
+    /* background-color: red; */
     
 }
+/* .center{
+    padding-left: 900px;
+} */
