--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 .home-header{
     /* background-color: rgb(151, 149, 149); */
     display: grid;
-    position: fixed;
+    position: sticky;
     padding: 15px;
+   
     position: relative;
+    z-index: 1000;
+}
+.Nav-bar{
+    position: sticky;
 }
 .banner{
    position: relative;
    margin-top: 200px;
    margin-left: 70px;
+   
 }
 
 .middel{
